# ai-base

./: .gitignore  README.md  index.py  main.py  pyproject.toml
data/gpt/: data.jsonl
src/: __init__.py
src/gpt/: index.ipynb
src/mnist/: __init__.py  dataset.py  mnist-for-bilibli.py  model.py  predict.py  train.py  upload_hf.py  utils.py
src/ocr/: main.py  upload_hf.py
src/utils/: __init__.py  device.py  file.py
